Implemented service to upload files with 'MultipartFile'